# mma

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linting.yml  testing.yml
examples/: gcmma_beam.py  mma_beam2.py  mma_function.py  mma_function2.py  mma_toy2.py  mma_truss2.py  util.py
src/mma/: __init__.py  approximations.py  bounds.py  mma.py  options.py  subsolve.py  target_function.py
test/: case_toy.py  test_main.py  test_mma.py  test_mma_beam_kkt.txt  test_mma_toy.py  test_mma_toy_vec1.txt  test_mma_toy_vec2.txt
test/reference/: test_mma_beam_vec1.txt  test_mma_beam_vec2.txt  test_mma_funct2_kkt.txt  test_mma_funct2_vec1.txt  test_mma_funct2_vec2.txt  test_mma_funct_kkt.txt  test_mma_funct_vec1.txt  test_mma_funct_vec2.txt  test_mma_toy_kkt.txt  test_mma_toy_vec1.txt  test_mma_toy_vec2.txt  test_mma_truss_kkt.txt  test_mma_truss_vec1.txt  test_mma_truss_vec2.txt
tests/: case.py  case_beam.py  case_funct.py  case_funct_2.py  test_mma.py  test_rosenbrock.py
