[project]
name = "mma"
version = "0.3.0"
description = "Python implementation of the Method of Moving Asymptotes (MMA)."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "scipy-stubs>=1.15.1.0",
]

[tool.ruff]
line-length = 79
lint.extend-select = ["D", "I", "R", "W"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "numpy"
